AboExperimentLang/src/elang01/ElangParser.java
// Generated from /Users/tuope/NetBeansProjects/AboExperimentLang/src/elang01/Elang.g4 by ANTLR 4.0
package fi.abo.kogni.soile2.elang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ElangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, DOCQUOTE=4, SFN_PLUS=5, SFN_MINUS=6, SFN_MULTIPLY=7, 
		SFN_DIVIDE=8, SFN_LESSTHAN=9, SFN_GREATERTHAN=10, SFN_EQUAL=11, SFN_NEGATE=12, 
		T_TRANSNAMEREPEAT=13, T_ARROWLEFT=14, T_ARROWRIGHT=15, T_BRACELEFT=16, 
		T_BRACERIGHT=17, T_BRACKETLEFT=18, T_BRACKETRIGHT=19, T_BREAK=20, T_COLON=21, 
		T_COMMA=22, T_CONTINUE=23, T_DO=24, T_DOT=25, T_ELSE=26, T_END=27, T_FALSE=28, 
		T_FUNCTION=29, T_FVAR=30, T_GVAR=31, T_HASH=32, T_IF=33, T_NO=34, T_NOTHING=35, 
		T_NULL=36, T_PARENLEFT=37, T_PARENRIGHT=38, T_QMARK=39, T_QUOTE=40, T_RETURN=41, 
		T_THEN=42, T_TRANSFINAL=43, T_TRANSITION=44, T_TRANSSTART=45, T_TRUE=46, 
		T_VAL=47, T_VAR=48, T_WHILE=49, T_YES=50, ID=51, NUMBER=52, STRING=53, 
		COMMENT=54, WS=55, NL=56;
	public static final String[] tokenNames = {
		"<INVALID>", "'intermezzo-phase'", "'information-phase'", "'interaction-phase'", 
		"DOCQUOTE", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'='", "'!'", "'-\"-'", 
		"'<-'", "'->'", "'{'", "'}'", "'['", "']'", "'break'", "':'", "','", "'continue'", 
		"'do'", "'.'", "'else'", "'end'", "'false'", "'function'", "'fvar'", "'gvar'", 
		"'#'", "'if'", "'no'", "'nothing'", "'null'", "'('", "')'", "'?'", "'\"'", 
		"'return'", "'then'", "'final'", "'transition'", "'start'", "'true'", 
		"'val'", "'var'", "'while'", "'yes'", "ID", "NUMBER", "STRING", "COMMENT", 
		"WS", "NL"
	};
	public static final int
		RULE_file = 0, RULE_toplevelStmt = 1, RULE_gvarDef = 2, RULE_valDef = 3, 
		RULE_functionDef = 4, RULE_functionDefParams = 5, RULE_functionDefParam = 6, 
		RULE_functionBody = 7, RULE_fvarDefs = 8, RULE_fvarDef = 9, RULE_varDefs = 10, 
		RULE_varDef = 11, RULE_block = 12, RULE_expr = 13, RULE_identifier = 14, 
		RULE_literal = 15, RULE_functionCall = 16, RULE_functionIdentifier = 17, 
		RULE_functionCallParams = 18, RULE_object = 19, RULE_array = 20, RULE_pair = 21, 
		RULE_stmt = 22, RULE_stmtAssign = 23, RULE_stmtContinue = 24, RULE_stmtBreak = 25, 
		RULE_stmtReturn = 26, RULE_stmtIfElse = 27, RULE_stmtIf = 28, RULE_stmtWhile = 29, 
		RULE_phaseDefs = 30, RULE_phaseDef = 31, RULE_informationPhase = 32, RULE_intermezzoPhase = 33, 
		RULE_interactionPhase = 34, RULE_phaseSetVar = 35, RULE_phaseSetVarValue = 36, 
		RULE_phaseFunctionDef = 37, RULE_phaseFunctionBody = 38, RULE_transitionDefs = 39, 
		RULE_transitions = 40, RULE_startTransition = 41, RULE_otherTransitions = 42, 
		RULE_finalTransition = 43, RULE_transition = 44, RULE_transitionSrc = 45, 
		RULE_transitionTo = 46, RULE_transitionCond = 47, RULE_number = 48, RULE_string = 49;
	public static final String[] ruleNames = {
		"file", "toplevelStmt", "gvarDef", "valDef", "functionDef", "functionDefParams", 
		"functionDefParam", "functionBody", "fvarDefs", "fvarDef", "varDefs", 
		"varDef", "block", "expr", "identifier", "literal", "functionCall", "functionIdentifier", 
		"functionCallParams", "object", "array", "pair", "stmt", "stmtAssign", 
		"stmtContinue", "stmtBreak", "stmtReturn", "stmtIfElse", "stmtIf", "stmtWhile", 
		"phaseDefs", "phaseDef", "informationPhase", "intermezzoPhase", "interactionPhase", 
		"phaseSetVar", "phaseSetVarValue", "phaseFunctionDef", "phaseFunctionBody", 
		"transitionDefs", "transitions", "startTransition", "otherTransitions", 
		"finalTransition", "transition", "transitionSrc", "transitionTo", "transitionCond", 
		"number", "string"
	};

	@Override
	public String getGrammarFileName() { return "Elang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ElangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public ToplevelStmtContext toplevelStmt(int i) {
			return getRuleContext(ToplevelStmtContext.class,i);
		}
		public PhaseDefsContext phaseDefs() {
			return getRuleContext(PhaseDefsContext.class,0);
		}
		public TransitionDefsContext transitionDefs() {
			return getRuleContext(TransitionDefsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ElangParser.EOF, 0); }
		public List<ToplevelStmtContext> toplevelStmt() {
			return getRuleContexts(ToplevelStmtContext.class);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_FUNCTION) | (1L << T_GVAR) | (1L << T_VAL))) != 0)) {
				{
				{
				setState(100); toplevelStmt();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106); phaseDefs();
			setState(108);
			_la = _input.LA(1);
			if (_la==T_TRANSITION) {
				{
				setState(107); transitionDefs();
				}
			}

			setState(110); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToplevelStmtContext extends ParserRuleContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public GvarDefContext gvarDef() {
			return getRuleContext(GvarDefContext.class,0);
		}
		public ValDefContext valDef() {
			return getRuleContext(ValDefContext.class,0);
		}
		public ToplevelStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toplevelStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterToplevelStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitToplevelStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitToplevelStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToplevelStmtContext toplevelStmt() throws RecognitionException {
		ToplevelStmtContext _localctx = new ToplevelStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_toplevelStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			switch (_input.LA(1)) {
			case T_GVAR:
				{
				setState(112); gvarDef();
				}
				break;
			case T_VAL:
				{
				setState(113); valDef();
				}
				break;
			case T_FUNCTION:
				{
				setState(114); functionDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GvarDefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public GvarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gvarDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterGvarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitGvarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitGvarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GvarDefContext gvarDef() throws RecognitionException {
		GvarDefContext _localctx = new GvarDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_gvarDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(T_GVAR);
			setState(118); identifier();
			setState(119); match(T_ARROWLEFT);
			setState(120); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValDefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ValDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterValDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitValDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitValDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValDefContext valDef() throws RecognitionException {
		ValDefContext _localctx = new ValDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_valDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(T_VAL);
			setState(123); identifier();
			setState(124); match(T_ARROWLEFT);
			setState(125); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FunctionDefParamsContext functionDefParams() {
			return getRuleContext(FunctionDefParamsContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFunctionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFunctionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFunctionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(T_FUNCTION);
			setState(128); identifier();
			setState(129); match(T_PARENLEFT);
			setState(131);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(130); functionDefParams();
				}
			}

			setState(133); match(T_PARENRIGHT);
			setState(134); functionBody();
			setState(135); match(T_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefParamsContext extends ParserRuleContext {
		public FunctionDefParamContext functionDefParam(int i) {
			return getRuleContext(FunctionDefParamContext.class,i);
		}
		public List<FunctionDefParamContext> functionDefParam() {
			return getRuleContexts(FunctionDefParamContext.class);
		}
		public FunctionDefParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFunctionDefParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFunctionDefParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFunctionDefParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefParamsContext functionDefParams() throws RecognitionException {
		FunctionDefParamsContext _localctx = new FunctionDefParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDefParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); functionDefParam();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(138); functionDefParam();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefParamContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ElangParser.ID, 0); }
		public FunctionDefParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFunctionDefParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFunctionDefParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFunctionDefParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefParamContext functionDefParam() throws RecognitionException {
		FunctionDefParamContext _localctx = new FunctionDefParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public FvarDefsContext fvarDefs() {
			return getRuleContext(FvarDefsContext.class,0);
		}
		public VarDefsContext varDefs() {
			return getRuleContext(VarDefsContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if (_la==T_FVAR) {
				{
				setState(146); fvarDefs();
				}
			}

			setState(150);
			_la = _input.LA(1);
			if (_la==T_VAR) {
				{
				setState(149); varDefs();
				}
			}

			setState(152); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FvarDefsContext extends ParserRuleContext {
		public List<FvarDefContext> fvarDef() {
			return getRuleContexts(FvarDefContext.class);
		}
		public FvarDefContext fvarDef(int i) {
			return getRuleContext(FvarDefContext.class,i);
		}
		public FvarDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fvarDefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFvarDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFvarDefs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFvarDefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FvarDefsContext fvarDefs() throws RecognitionException {
		FvarDefsContext _localctx = new FvarDefsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fvarDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(154); fvarDef();
				}
				}
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T_FVAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FvarDefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public FvarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fvarDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterFvarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitFvarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitFvarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FvarDefContext fvarDef() throws RecognitionException {
		FvarDefContext _localctx = new FvarDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fvarDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); match(T_FVAR);
			setState(160); identifier();
			setState(161); match(T_ARROWLEFT);
			setState(162); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefsContext extends ParserRuleContext {
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterVarDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitVarDefs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitVarDefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefsContext varDefs() throws RecognitionException {
		VarDefsContext _localctx = new VarDefsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_varDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164); varDef();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T_VAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); match(T_VAR);
			setState(170); identifier();
			setState(171); match(T_ARROWLEFT);
			setState(172); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ElangListener ) ((ElangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ElangVisitor ) return ((ElangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(174); stmt();
				}
				}
				setState(177); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_BREAK) | (1L << T_CONTINUE) | (1L << T_IF) | (1L << T_RETURN) | (1L << T_WHILE) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
